add jira-suggest http endpoint
