# internal/adapters/http/handlers.go
@@ -5,12 +5,14 @@ import (
 	"time"
 
 	"github.com/kriuchkov/tock/internal/core/ports"
+	"github.com/kriuchkov/tock/internal/jira"
 )
 
 type Handler struct {
 	service     ports.ActivityResolver
 	corsConfig  CORSConfig
 	broadcaster *EventBroadcaster
+	jiraClient  *jira.Client
 }
 
 func NewHandler(service ports.ActivityResolver) *Handler {
@@ -18,6 +20,7 @@ func NewHandler(service ports.ActivityResolver) *Handler {
 		service:     service,
 		corsConfig:  DefaultCORSConfig(),
 		broadcaster: NewEventBroadcaster(60 * time.Second),
+		jiraClient:  nil,
 	}
 }
 
@@ -27,6 +30,7 @@ func NewHandlerWithCORS(service ports.ActivityResolver, corsConfig CORSConfig) *
 		service:     service,
 		corsConfig:  corsConfig,
 		broadcaster: NewEventBroadcaster(60 * time.Second),
+		jiraClient:  nil,
 	}
 }
 
@@ -36,6 +40,7 @@ func NewHandlerWithEvents(service ports.ActivityResolver, broadcaster *EventBroa
 		service:     service,
 		corsConfig:  DefaultCORSConfig(),
 		broadcaster: broadcaster,
+		jiraClient:  nil,
 	}
 }
 
@@ -45,6 +50,35 @@ func NewHandlerWithCORSAndEvents(service ports.ActivityResolver, corsConfig CORS
 		service:     service,
 		corsConfig:  corsConfig,
 		broadcaster: broadcaster,
+		jiraClient:  nil,
+	}
+}
+
+// HandlerOptions configures Handler creation
+type HandlerOptions struct {
+	Service     ports.ActivityResolver
+	CORSConfig  *CORSConfig
+	Broadcaster *EventBroadcaster
+	JiraClient  *jira.Client
+}
+
+// NewHandlerWithOptions creates a new handler with all optional configurations
+func NewHandlerWithOptions(opts HandlerOptions) *Handler {
+	cors := DefaultCORSConfig()
+	if opts.CORSConfig != nil {
+		cors = *opts.CORSConfig
+	}
+
+	broadcaster := opts.Broadcaster
+	if broadcaster == nil {
+		broadcaster = NewEventBroadcaster(60 * time.Second)
+	}
+
+	return &Handler{
+		service:     opts.Service,
+		corsConfig:  cors,
+		broadcaster: broadcaster,
+		jiraClient:  opts.JiraClient,
 	}
 }
 
@@ -61,4 +95,5 @@ func (h *Handler) RegisterRoutes() {
 	http.HandleFunc("/activity/recent", cors(h.Recent))
 	http.HandleFunc("/activity/report", cors(h.Report))
 	http.HandleFunc("/activity/events", cors(h.Events))
+	http.HandleFunc("/jira/suggest", cors(h.JiraSuggest))
 }
